sampler/chain/projects/jadx/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/jadx/jadx-core/src/main/java/jadx/core/utils/BlockUtils.java:239: error: [NullAway] (INDEX= 257) (Covered) returning @Nullable expression from method with @NonNull return type
			return null;
			^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/jadx/jadx-core/src/main/java/jadx/core/utils/InsnUtils.java:139: error: [NullAway] (INDEX= 305) (Covered) returning @Nullable expression from method with @NonNull return type
		return null;
		^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/jadx/jadx-core/src/main/java/jadx/core/dex/instructions/InsnDecoder.java:466: error: [NullAway] (INDEX= 315) (Covered) passing @Nullable parameter 'null' where @NonNull is required
						null,
						^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/jadx/jadx-core/src/main/java/jadx/core/codegen/MethodGen.java:320: error: [NullAway] (INDEX= 237) (Covered) passing @Nullable parameter 'prevInsn' where @NonNull is required
			if (option != BLOCK_DUMP && needLabel(insn, prevInsn)) {
			                                            ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/jadx/jadx-core/src/main/java/jadx/core/dex/visitors/EnumVisitor.java:444: error: [NullAway] (INDEX= 346) (Covered) returning @Nullable expression from method with @NonNull return type
			return null;
			^

	(see http://t.uber.com/nullaway )
